# test_project_2

./: .gitignore
Scripts/: create_audio_files.py  create_worksheets.ipynb  select_words.ipynb
Scripts/analysis/: analysis plan.qmd  analysis_techno_spelling.qmd  prep_spelling.qmd  prep_spelling_paper.qmd  prep_spelling_pc.qmd
Scripts/raffle/: select_participants_raffle.qmd
Scripts/study design/: counterbalancing.ipynb  pyproject.toml  select_words.ipynb
