[tool.poetry]
name = "test2"
version = "0.0.1"
description = ""
authors = ["Mario E. Bermonti-Pérez <mbermonti1132@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
#wdiff = "^0.0.9"
pandas = "^2.0.2"
ibm-watson = "^7.0.0"
gTTS = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
